# OpenGLBezierProject

./: .gitignore  ArnalAngerLeo_BezierProject.filters  ArnalAngerLeo_BezierProject.vcxproj  BezierCurve.h  BezierCurveMesh.h  BezierProject.sln  BezierSurfaceMesh.h  CMakeConfig.h.in  CMakeLists.txt  Camera.h  ControlCurveMesh.h  ControlSurfaceMesh.h  LICENSE  Lights.h  Models.h  NormalMesh.h  Objects.h  README.md  ShaderProgram.cpp  ShaderProgram.h  What do I want.txt  fragmentCurve.glsl  fragmentLight.glsl  fragmentNormal.glsl  glad.c  lightMesh.h  main.cpp
Application/: ArnalAngerLeo_BezierProject.exe.recipe  ArnalAngerLeo_BezierProject.iobj  ArnalAngerLeo_BezierProject.ipdb  ArnalAngerLeo_BezierProject.vcxproj.FileListAbsolute.txt
img/: animation_demo.webm
include/glad/: glad.h
lib/glm/: CMakeLists.txt
lib/imgui/examples/example_sdl_vulkan/: example_sdl_vulkan.vcxproj.filters
libs/: glfw3.lib
src/: BezierSurface.h  BezierSurfaceMesh.h  ControlCurveMesh.h  ControlSurfaceMesh.h  Interface.t.hpp  Light.t.hpp  NormalMesh.h  Object.t.hpp  Particle.t.hpp  ParticlesContainer.t.hpp  Render.t.hpp  Render_scene.t.hpp  Scene.t.hpp  ShaderProgram.h  _ControlGLSL.hpp  _Interface.hpp  _Light.hpp  _Object.hpp  _Particle.hpp  _ParticlesContainer.hpp  _Render.hpp  _Render_scene.hpp  _Scene.hpp  _cube_utils.hpp  _utils.hpp  lightMesh.h  main.cpp  structures.hpp  utils.t.hpp
src/shaders/: fragmentBLOOM.glsl  fragmentHDR.glsl  fragmentLight.glsl  fragmentPARTICLE.glsl  fragmentShader.glsl  fragmentShader_test.glsl  vertexLight.glsl  vertexPARTICLE.glsl  vertexShader.glsl
